--- a/tutorials/tutorials.yml
+++ b/tutorials/tutorials.yml
@@ -359,7 +359,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Strapi
   use_case: Authentication
@@ -396,7 +396,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Shopify
   use_case: E-commerce
@@ -414,7 +414,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Strapi
   use_case: Getting started
@@ -504,7 +504,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Strapi
   use_case: Customization
@@ -521,7 +521,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Strapi
   use_case: Customization
@@ -650,7 +650,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Strapi
   use_case: Authentication
@@ -705,7 +705,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Strapi
   use_case: Customization
@@ -761,7 +761,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Heroku
     - MongoDB Atlas
@@ -940,7 +940,7 @@
   github_authors:
     - mcastres
   source: https://strapi.io/blog
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/cover-vuejs-cms_94780dde12.jpeg
+  image_url: https://assets.strapi.io/uploads/cover-vuejs-cms_94780dde12.jpeg
   stack:
     - Vue.js
     - Apollo
@@ -1030,7 +1030,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Strapi
   use_case: Customization
@@ -1049,7 +1049,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Heroku
     - Postgresql
@@ -1068,7 +1068,7 @@
     - Jim Laurie
   github_authors:
     - lauriejim
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
+  image_url: https://assets.strapi.io/uploads/recipe-recaps-april_cd2fee9717_fe14d5c7b3.jpeg
   stack:
     - Docker
     - Postgresql
@@ -1261,7 +1261,7 @@
   github_authors:
     - mcastres
   source: https://blog.strapi.io/
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/angular_af1ba4ed75.jpeg
+  image_url: https://assets.strapi.io/uploads/angular_af1ba4ed75.jpeg
   stack:
     - Angular
     - Apollo
@@ -1286,7 +1286,7 @@
   github_authors:
     - mcastres
   source: https://blog.strapi.io/
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/next-js_995cbe0c2e.jpeg
+  image_url: https://assets.strapi.io/uploads/next-js_995cbe0c2e.jpeg
   stack:
     - Next.js
     - Apollo
@@ -1362,7 +1362,7 @@
   github_authors:
     - ryanbelke
   source: https://blog.strapi.io/
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/next-js_995cbe0c2e.jpeg
+  image_url: https://assets.strapi.io/uploads/next-js_995cbe0c2e.jpeg
   stack:
     - Next.js
     - GraphQL
@@ -1463,7 +1463,7 @@
   github_authors:
     - john-smilga
   source: https://youtube.com/
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/cover-gatsby_636a0a4228.jpeg
+  image_url: https://assets.strapi.io/uploads/cover-gatsby_636a0a4228.jpeg
   stack:
     - Gatsby
   use_case: Portfolio
@@ -1749,7 +1749,7 @@
   github_authors:
     - pierreburgy
   source: https://blog.strapi.io/
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/cover_jekyll_cms_8f74ffb67a.png
+  image_url: https://assets.strapi.io/uploads/cover_jekyll_cms_8f74ffb67a.png
   stack:
     - Jekyll
   use_case: Blog
@@ -1908,7 +1908,7 @@
   github_authors:
     - soupette
   source: https://www.strapi.io/
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/cover-react-cms_09dce2416d.jpeg
+  image_url: https://assets.strapi.io/uploads/cover-react-cms_09dce2416d.jpeg
   stack:
     - NodeJs
   use_case: Authentication
@@ -1988,7 +1988,7 @@
   github_authors:
     - enBonnet
   source: https://enbonnet.me
-  image_url: https://d2zv2ciw0ln4h1.cloudfront.net/uploads/cover-gatsby_636a0a4228.jpeg
+  image_url: https://assets.strapi.io/uploads/cover-gatsby_636a0a4228.jpeg
   stack:
     - Gatsby
   use_case: Blog
@@ -2704,4 +2704,151 @@
   use_case: Deployment
   stack:
   version: 3.4.3
+- title: Create a guided tour plugin using reactour
+  link: https://strapi.io/blog/create-a-guided-tour-plugin-using-reactour
+  formats:
+    - article
+  language: en
+  date: 2021-02-22
+  authors:
+    - Strapi
+  github_authors:
+    - strapi
+  source: https://strapi.io
+  image_url: https://assets.strapi.io/uploads/Strapi_Guided_Tour_2_9ba4f2fa2a.png
+  use_case: Customization
+  stack:
+    - React
+  version: 3.5.0
+- title: How to use the @nuxtjs/strapi Module to add Authentication to a Nuxt Application
+  link: https://strapi.io/blog/how-to-use-the-nuxt-strapi-module-to-add-authentication-to-a-nuxt-application
+  formats:
+    - article
+  language: en
+  date: 2021-02-08
+  authors:
+    - Alex Godwin
+  github_authors:
+    - oviecodes
+  source: https://strapi.io
+  image_url: https://assets.strapi.io/uploads/categories_of_Strapi_Hooks_1_0855f72761.png
+  use_case: Authentication
+  stack:
+    - Nuxt.js
+    - Vue.js
+  version: 3.5.0
+- title: How to Build a Real-time Chat Forum using Strapi, Socket.io, React and MongoDB
+  link: https://strapi.io/blog/how-to-build-a-real-time-chat-forum-using-strapi-socket-io-react-and-mongo-db
+  formats:
+    - article
+  language: en
+  date: 2021-02-05
+  authors:
+    - Purnima Gupta
+  github_authors:
+    - purnimagupta
+  source: https://strapi.io
+  image_url: https://assets.strapi.io/uploads/Build_a_Real_time_Chat_Forum_using_Strapi_Socket_io_React_and_Mongo_DB_ad3b0fc8d0.png
+  use_case: Getting started
+  stack:
+    - React
+    - Socket.io
+    - MongoDB
+  version: 3.5.0
+- title: How to build an E-commerce Store with Nuxt.js and Strapi
+  link: https://strapi.io/blog/how-to-build-a-real-time-chat-forum-using-strapi-socket-io-react-and-mongo-db
+  formats:
+    - article
+  language: en
+  date: 2021-02-03
+  authors:
+    - Alex Godwin
+  github_authors:
+    - oviecodes
+  source: https://strapi.io
+  image_url: https://assets.strapi.io/uploads/Building_An_e_Commerce_Store_with_Nuxt_js_Mongo_DB_Stripe_and_Strapi_5ec4788891.png
+  use_case: E-commerce
+  stack:
+    - Nuxt.js
+  version: 3.5.0
+- title: Web scraping with Strapi
+  link: https://strapi.io/blog/web-scraping-with-strapi
+  formats:
+    - article
+  language: en
+  date: 2021-01-27
+  authors:
+    - Strapi
+  github_authors:
+    - strapi
+  source: https://strapi.io
+  image_url: https://assets.strapi.io/uploads/Web_scraping_with_Strapi_baf0bccedb.png
+  use_case: Getting started
+  stack:
+    - Puppeteer
+  version: 3.5.0
+- title: User Authentication in Next.js with Strapi2
+  link: https://strapi.io/blog/user-authentication-in-next-js-with-strapi
+  formats:
+    - article
+  language: en
+  date: 2021-01-25
+  authors:
+    - Nirmalya Ghosh
+  github_authors:
+    - ghoshnirmalya
+  source: https://strapi.io
+  image_url: https://assets.strapi.io/uploads/Strapi_Next_Auth_7ddf938c4d.png
+  use_case: Authentication
+  stack:
+    - Next.js
+  version: 3.5.0
+- title: Change the default WYSIWYG to Toast UI editor
+  link: https://strapi.io/blog/change-the-default-wysiwyg-to-toast-ui-editor
+  formats:
+    - article
+  language: en
+  date: 2021-01-18
+  authors:
+    - Strapi
+  github_authors:
+    - strapi
+  source: https://strapi.io
+  image_url: https://assets.strapi.io/uploads/How_to_change_the_default_1_2c6a5f0488.png
+  use_case: Customization
+  stack:
+    - React
+  version: 3.5.0
+- title: Adding Cloudinary support to your Strapi Application
+  link: https://strapi.io/blog/adding-cloudinary-support-to-your-strapi-application
+  formats:
+    - article
+  language: en
+  date: 2020-12-09
+  authors:
+    - Cretu Razvan
+  github_authors:
+    - RazvanCretu
+  source: https://strapi.io
+  image_url: https://assets.strapi.io/uploads/Strapi_and_Next_Corporate_Starter_3ee079d385.png
+  use_case: Customization
+  stack:
+    - Cloudinary
+  version: 3.5.0
+- title: Analyzing data from a Strapi API with Python
+  link: https://strapi.io/blog/analyzing-data-from-a-strapi-api-with-python
+  formats:
+    - article
+  language: en
+  date: 2020-12-01
+  authors:
+    - Cretu Razvan
+  github_authors:
+    - RazvanCretu
+  source: https://strapi.io
+  image_url: https://assets.strapi.io/uploads/Analysing_Data_from_bf5f76ea41.png
+  use_case: API
+  stack:
+    - Python
+  version: 3.5.0
  
