--- a/starters/starters.yml
+++ b/starters/starters.yml
@@ -16,7 +16,7 @@
     - Responsive design using UIkit
   youtube: https://www.youtube.com/embed/zE1S8CHkev8
   how_to_install: Clone the repository and start both of your backend server and frontend server.
-  command: git clone https://github.com/strapi/strapi-starter-next-blog
+  command: yarn create strapi-starter next-blog
 - title: Nuxt.js Blog Starter
   author: Maxime Castres
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-nuxt-blog/master/screenshot.png
@@ -35,7 +35,7 @@
     - Responsive design using UIkit
   youtube:
   how_to_install: Clone the repository and start both of your backend server and frontend server.
-  command: git clone https://github.com/strapi/strapi-starter-nuxt-blog
+  command: yarn create strapi-starter nuxt-blog
 - title: Gatsby Blog Starter
   author: Maxime Castres
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-gatsby-blog/master/screenshot.png
@@ -59,7 +59,7 @@
     - Role-based access control
   youtube: https://www.youtube.com/embed/wsFuSebpv0I
   how_to_install: Clone the repository and start both of your backend server and frontend server.
-  command: git clone https://github.com/strapi/strapi-starter-gatsby-blog-v2
+  command: yarn create strapi-starter gatsby-blog
 - title: Gridsome Blog Starter
   author: Maxime Castres
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-gridsome-blog/master/screenshot.png
@@ -83,26 +83,7 @@
     - Role-based access control
   youtube:
   how_to_install: Clone the repository and start both of your backend server and frontend server.
-  command: git clone https://github.com/strapi/strapi-starter-gridsome-blog
-- title: Angular Blog Starter
-  author: Maxime Castres
-  cover: https://raw.githubusercontent.com/strapi/strapi-starter-angular-blog/master/screenshot.png
-  repo: strapi/strapi-starter-angular-blog
-  slug: strapi-starter-angular-blog
-  preview:
-  integration: Angular
-  use_cases:
-    - Blog
-  description: Bootstrap a simple blog application using Angular, Apollo and Strapi, the most suitable headless CMS for Angular.
-  features:
-    - 2 Collection types
-    - 2 Created articles
-    - 3 Created categories
-    - Permissions set to true for the required content types
-    - Responsive design using UIkit
-  youtube:
-  how_to_install: Clone the repository and start both of your backend server and frontend server
-  command: git clone https://github.com/strapi/strapi-starter-angular-blog
+  command: yarn create strapi-starter gridsome-blog
 - title: Nuxt.js E-commerce Starter
   author: Maxime Castres
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-nuxt-e-commerce/master/screenshot.png
@@ -125,7 +106,7 @@
     - Role-based access control
   youtube:
   how_to_install: Clone the repository and start both of your backend server and frontend server.
-  command: git clone https://github.com/strapi/strapi-starter-nuxt-e-commerce
+  command: yarn create strapi-starter nuxt-e-commerce
 - title: Next.js Corporate Starter
   author: Rémi de Juvigny
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-next-corporate/master/screenshot.png
@@ -145,7 +126,7 @@
     - An integrated Preview Mode, to view your pages on a private URL before publishing them
   youtube:
   how_to_install: Clone the repository and start both of your backend server and frontend server
-  command: git clone https://github.com/strapi/strapi-starter-next-corporate
+  command: yarn create strapi-starter next-corporate
 - title: Gridsome Portfolio Starter
   author: Rémi de Juvigny
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-gridsome-portfolio/master/screenshot.png
@@ -163,7 +144,7 @@
     - Dynamic zones to have full control over your content
   youtube: https://www.youtube.com/embed/4g3Pzj-wdXo
   how_to_install: Clone the repository and start both of your backend server and frontend server.
-  command: git clone https://github.com/strapi/strapi-starter-gridsome-portfolio
+  command: yarn create strapi-starter gridsome-portfolio
 - title: Next.js E-commerce Starter
   author: Rémi de Juvigny
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-next-ecommerce/master/screenshot.png
@@ -184,7 +165,7 @@
     - Slug system
   youtube:
   how_to_install: Clone the repository and follow the readme instructions
-  command: git clone https://github.com/strapi/strapi-starter-next-ecommerce
+  command: yarn create strapi-starter next-ecommerce
 - title: Gatsby Catalog Starter
   author: Mark Kaylor
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-gatsby-catalog/main/screenshot.png
@@ -203,4 +184,4 @@
     - Responsive design using Tailwind CSS
   youtube:
   how_to_install: Clone the repository and follow the readme instructions
-  command: git clone https://github.com/strapi/strapi-starter-gatsby-catalog
+  command: yarn create strapi-starter gatsby-catalog
