add project name

--- a/starters/starters.yml
+++ b/starters/starters.yml
@@ -17,9 +17,9 @@
   youtube: https://www.youtube.com/embed/zE1S8CHkev8
   how_to_install: Clone the repository and start both of your backend server and frontend server.
   command: |-
-    yarn create strapi-starter next-blog
+    yarn create strapi-starter my-project next-blog
     // or
-    npx create-strapi-starter next-blog
+    npx create-strapi-starter my-project next-blog
 - title: Nuxt.js Blog Starter
   author: Maxime Castres
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-nuxt-blog/master/screenshot.png
@@ -39,9 +39,9 @@
   youtube:
   how_to_install: Clone the repository and start both of your backend server and frontend server.
   command: |-
-    yarn create strapi-starter nuxt-blog
+    yarn create strapi-starter my-project nuxt-blog
     // or
-    npx create-strapi-starter nuxt-blog
+    npx create-strapi-starter my-project nuxt-blog
 - title: Gatsby Blog Starter
   author: Maxime Castres
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-gatsby-blog/master/screenshot.png
@@ -66,9 +66,9 @@
   youtube: https://www.youtube.com/embed/wsFuSebpv0I
   how_to_install: Clone the repository and start both of your backend server and frontend server.
   command: |-
-    yarn create strapi-starter gatsby-blog
+    yarn create strapi-starter my-project gatsby-blog
     // or
-    npx create-strapi-starter gatsby-blog
+    npx create-strapi-starter my-project gatsby-blog
 - title: Gridsome Blog Starter
   author: Maxime Castres
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-gridsome-blog/master/screenshot.png
@@ -93,9 +93,9 @@
   youtube:
   how_to_install: Clone the repository and start both of your backend server and frontend server.
   command: |-
-    yarn create strapi-starter gridsome-blog
+    yarn create strapi-starter my-project gridsome-blog
     // or
-    npx create-strapi-starter gridsome-blog
+    npx create-strapi-starter my-project gridsome-blog
 - title: Nuxt.js E-commerce Starter
   author: Maxime Castres
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-nuxt-e-commerce/master/screenshot.png
@@ -119,9 +119,9 @@
   youtube:
   how_to_install: Clone the repository and start both of your backend server and frontend server.
   command: |-
-    yarn create strapi-starter nuxt-e-commerce
+    yarn create strapi-starter my-project nuxt-e-commerce
     // or
-    npx create-strapi-starter nuxt-e-commerce
+    npx create-strapi-starter my-project nuxt-e-commerce
 - title: Next.js Corporate Starter
   author: Rémi de Juvigny
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-next-corporate/master/screenshot.png
@@ -142,9 +142,9 @@
   youtube:
   how_to_install: Clone the repository and start both of your backend server and frontend server
   command: |-
-    yarn create strapi-starter next-corporate
+    yarn create strapi-starter my-project next-corporate
     // or
-    npx create-strapi-starter next-corporate
+    npx create-strapi-starter my-project next-corporate
 - title: Gridsome Portfolio Starter
   author: Rémi de Juvigny
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-gridsome-portfolio/master/screenshot.png
@@ -163,9 +163,9 @@
   youtube: https://www.youtube.com/embed/4g3Pzj-wdXo
   how_to_install: Clone the repository and start both of your backend server and frontend server.
   command: |-
-    yarn create strapi-starter gridsome-portfolio
+    yarn create strapi-starter my-project gridsome-portfolio
     // or
-    npx create-strapi-starter gridsome-portfolio
+    npx create-strapi-starter my-project gridsome-portfolio
 - title: Next.js E-commerce Starter
   author: Rémi de Juvigny
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-next-ecommerce/master/screenshot.png
@@ -187,9 +187,9 @@
   youtube:
   how_to_install: Clone the repository and follow the readme instructions
   command: |-
-    yarn create strapi-starter next-ecommerce
+    yarn create strapi-starter my-project next-ecommerce
     // or
-    npx create-strapi-starter next-ecommerce
+    npx create-strapi-starter my-project next-ecommerce
 - title: Gatsby Catalog Starter
   author: Mark Kaylor
   cover: https://raw.githubusercontent.com/strapi/strapi-starter-gatsby-catalog/main/screenshot.png
@@ -209,6 +209,6 @@
   youtube:
   how_to_install: Clone the repository and follow the readme instructions
   command: |-
-    yarn create strapi-starter gatsby-catalog
+    yarn create strapi-starter my-project gatsby-catalog
     // or
-    npx create-strapi-starter gatsby-catalog
+    npx create-strapi-starter my-project gatsby-catalog
