--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -807,3 +807,13 @@
     - Bootstrap
   made_by: Tobias Thiele
   made_by_url: https://tobias-thiele.de/
+- title: Ops One - Swiss DevOps services
+  url: https://opsone.ch/
+  description: Whether consulting, managed servers, managed Kubernetes or managed applications - Ops One offers you individual solutions that fit you exactly.
+  categories:
+    - Corporate website
+    - Blog
+  frontend:
+    - Nuxt.js
+  made_by: Unknown Digital
+  made_by_url: https://unknown.digital/
