FIx last tutorial

--- a/tutorials/tutorials.yml
+++ b/tutorials/tutorials.yml
@@ -3416,7 +3416,7 @@
     - Next.js
     - React
   version: 3.6.0
-- title: How We Localized Our Website in 9 Languages in Under a Week: And So Can You
+- title: How We Localized Our Website in 9 Languages in Under a Week - And So Can You
   link: https://hackernoon.com/how-we-localized-our-website-in-9-languages-in-under-a-week-and-so-can-you-ev1z37dc
   formats:
     - article
