--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -850,7 +850,7 @@
     - AWS (s3)
   made_by: Alexander Antonyuk
   made_by_url: https://www.linkedin.com/in/antonyuk-space/
-- title: The Papper Matter
+- title: The Paper Matter
   url: https://papermatter.xyz/
   description: Website and portfolio for a Mexican based 3D Visual Studio.
   categories:
